# AuleLiberePoliMi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  bot.py  pyproject.toml
.github/workflows/: deploy-mini-app.yml
docs/: AGENTS.md  README.md  TODO.md
functions/: __init__.py  errorhandler.py  input_check.py  keyboard_builder.py  string_builder.py
json/: location.json
json/lang/: en.json  it.json
search/: find_classrooms.py  powerFileGen.py
webapp/settings/: index.html  script.js  style.css  wrangler.toml
